# ChatOrion

./: README.md
ChatOrionClient/: .gitignore  ChatOrionClient.pro  apply_friend_dialog.cpp  apply_friend_dialog.h  apply_friend_dialog.ui  apply_friend_page.cpp  apply_friend_page.h  apply_friend_page.ui  authen_friend_dialog.cpp  authen_friend_dialog.h  authen_friend_dialog.ui  chat_dialog.cpp  chat_dialog.h  chat_dialog.ui  chat_page.cpp  chat_page.h  chat_page.ui  chat_view.cpp  chat_view.h  common_utils.h  commonu_tils.cpp  config.ini  emoji.json  emotion_window.cpp  emotion_window.h  emotion_window.ui  find_failed_dialog.cpp  find_failed_dialog.h  find_failed_dialog.ui  find_success_dialog.cpp  find_success_dialog.h  find_success_dialog.ui  friend_info_page.cpp  friend_info_page.h  friend_info_page.ui  global.cpp  global.h  login_gui.cpp  login_gui.h  login_gui.ui  (+19 more)
ChatOrionClient/FrameWgt/: framewgt.cpp  framewgt.h
ChatOrionClient/custom_ui/: apply_friend_item.cpp  apply_friend_item.h  apply_friend_item.ui  apply_friend_list.cpp  apply_friend_list.h  bubble_frame.cpp  bubble_frame.h  chat_item_base.cpp  chat_item_base.h  chat_user_item.cpp  chat_user_item.h  chat_user_item.ui  chat_user_list.cpp  chat_user_list.h  chatuser_item.cpp  chatuser_item.h  chatuser_list.cpp  chatuser_list.h  clicked_btn.cpp  clicked_btn.h  clicked_label.cpp  clicked_label.h  clicked_once_label.cpp  con_user_item.cpp  con_user_item.h  con_user_item.ui  contact_user_list.cpp  contact_user_list.h  content_bubble.cpp  content_bubble.h  customize_edit.cpp  customize_edit.h  emotion_bubble.cpp  emotion_bubble.h  emotion_label_item.cpp  emotion_label_item.h  friend_label.cpp  friend_label.h  friend_label.ui  group_tip_item.cpp  (+26 more)
ChatOrionClient/network/: http_mgr.cpp  http_mgr.h  tcp_mgr.cpp  tcp_mgr.h
ChatOrionClient/qtkeychain/: keychain_win.cpp
ChatOrionClient/res/qss/: EmotionWindow.qss  chatWin.qss  style-1.qss  style-2.qss  style-3.qss  style-4.qss
ChatOrionClient/utils/: base_dialog.cpp  base_dialog.h  common_utils.cpp  common_utils.h  cui_helper.cpp  cui_helper.h  frameless_wid_drag_mgr.cpp  frameless_wid_drag_mgr.h  keychainclass.cpp  message_bus.cpp  message_bus.h  message_commands.h  tools.cpp  tools.h
ChatOrionServer/: .gitignore  CMakeLists.txt  const.h  cserver.cpp  cserver.h  http_connection.cpp  http_connection.h  main.cpp  tools.h
ChatOrionServer/ChatServer/: CMakeLists.txt  CServer.cpp  CServer.h  CSession.cpp  CSession.h  ChatCacheManager.cpp  ChatCacheManager.h  ChatGrpcClient.cpp  ChatGrpcClient.h  ChatServiceImpl.cpp  ChatServiceImpl.h  LogicSystem.cpp  LogicSystem.h  MsgNode.cpp  MsgNode.h  MySQLDao.cpp  MySQLDao.h  MySQLManager.cpp  MySQLManager.h  UserMgr.cpp  UserMgr.h  chat_messages.sql  data.h  main.cpp  message.pb.cc  message.pb.h  redis_keys.h
ChatOrionServer/GateServer/: AsioIOServicePool.h  CMakeLists.txt  MySQLConnectPool.cpp  MySQLDao.cpp  MySQLDao.h  MySQLManager.cpp  MySQLManager.h  RedisConnectPool.cpp  RedisManager.cpp  RedisManager.h  Settings.cpp  Settings.h  config.ini  const.h  cserver.cpp  cserver.h  http_connection.cpp  http_connection.h  logic_system.cpp  logic_system.h  main.cpp  message.pb.cc  reg_user_procedure.sql  tools.cpp  user.sql  verify_grpc_client.cpp  verify_grpc_client.h
ChatOrionServer/StatusServer/: CMakeLists.txt  StatusServiceImpl.cpp  StatusServiceImpl.h  main.cpp  message.grpc.pb.cc  message.grpc.pb.h
ChatOrionServer/VarifyServer/: config.js  config.json  email.js  package-lock.json  package.json  proto.js  redis.js  server.js
ChatOrionServer/platfrom/: AsioIOServicePool.cpp  AsioIOServicePool.h  CMakeLists.txt  ConnectionPoolProxy.h  MySQLConnectPool.h  RedisConnectPool.h  RedisManager.cpp  RedisManager.h  Settings.cpp  Settings.h  StatusGrpcClient.cpp  StatusGrpcClient.h  config.ini  const.h  log.cpp  log.h  message.pb.cc  message.pb.h  singleton.hpp  tools.cpp  tools.h
ChatOrionServer/protocol/: build_proto.sh  message.grpc.pb.cc  message.pb.h  message.proto
third/lib/linux/boost/: libboost_atomic.so.1.87.0  libboost_contract.so.1.87.0  libboost_date_time.so.1.87.0  libboost_fiber.so.1.87.0  libboost_filesystem.so.1.87.0  libboost_iostreams.so.1.87.0  libboost_log.so.1.87.0  libboost_math_c99f.so.1.87.0  libboost_math_c99l.so.1.87.0  libboost_math_tr1l.so.1.87.0  libboost_numpy38.so.1.87.0  libboost_python38.so.1.87.0  libboost_regex.so.1.87.0  libboost_stacktrace_backtrace.so.1.87.0  libboost_stacktrace_basic.so.1.87.0  libboost_stacktrace_noop.so.1.87.0  libboost_wave.so.1.87.0
third/lib/linux/grpc/: libz.so.1.2.11
third/lib/linux/grpc/pkgconfig/: grpc++.pc  grpc++_unsecure.pc  grpc_unsecure.pc  libcares.pc
third/lib/linux/jsoncpp/: libjsoncpp.so.1.9.7
third/lib/linux/jsoncpp/pkgconfig/: jsoncpp.pc
third/linux/boost/lib/: libboost_charconv.so.1.87.0  libboost_chrono.so.1.87.0  libboost_container.so.1.87.0  libboost_context.so.1.87.0  libboost_coroutine.so.1.87.0  libboost_graph.so.1.87.0  libboost_iostreams.so.1.87.0  libboost_json.so.1.87.0  libboost_locale.so.1.87.0  libboost_log_setup.so.1.87.0  libboost_math_c99.so.1.87.0  libboost_math_tr1.so.1.87.0  libboost_math_tr1f.so.1.87.0  libboost_nowide.so.1.87.0  libboost_numpy38.so.1.87.0  libboost_prg_exec_monitor.so.1.87.0  libboost_process.so.1.87.0  libboost_program_options.so.1.87.0  libboost_random.so.1.87.0  libboost_serialization.so.1.87.0  libboost_stacktrace_addr2line.so.1.87.0  libboost_stacktrace_from_exception.so.1.87.0  libboost_system.so.1.87.0  libboost_thread.so.1.87.0  libboost_timer.so.1.87.0  libboost_type_erasure.so.1.87.0  libboost_unit_test_framework.so.1.87.0  libboost_url.so.1.87.0  libboost_wserialization.so.1.87.0
third/linux/glog/lib/: libglog.so.0.5.0
third/linux/glog/lib/pkgconfig/: libglog.pc
third/linux/grpc/lib/pkgconfig/: gpr.pc  grpc.pc  (+2 more)
third/linux/hiredis/lib/: libhiredis.so.1.2.1-dev
third/linux/mysql_connector/: INFO_BIN
third/linux/mysql_connector/lib64/: libmysqlcppconn.so.10  libmysqlcppconnx.so.2  libmysqlcppconnx.so.2.9.1.0
third/linux/qtkeychain/lib/: libqt5keychain.so.0.15.99  libqt5keychain.so.1
(+205 files in other folders)
